--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,59 +6,59 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
 .Header {
   width: 100%;
   color: rgb(219, 217, 214);
   background-color: rgb(35, 57, 59);
 }
 .title {
-  margin: 60px;
+  margin-top: 70px;
   color: rgb(58, 209, 189);
   background-image: url("../public/image.PNG");
   width: 60%;
-  height: 100%;
-  text-align: center;
+  height: 600px;
   font-size: 100px;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+
 }
 
 .about {
-  margin: 60px;
+  margin-top: 60px;
   color: rgb(245, 234, 234);
   font-size: 30px;
-  width: 500px;
-  word-wrap: break-all;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  width:60%;
+  word-break:break-all;
 }
-p {
-  word-break: break-all;
-}
+
 .Infomation{
-  margin: 60px;
+  margin-top: 60px;
   font-size: 60px;
   text-align: center;
 }
 .map {
-  margin: 60px;
+  margin-top: 60px;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .footer {
-  width: 100%;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 60px;
+
+  margin-right: auto;
+  margin-left: auto;
+  height: 90px;
   background-color: rgb(53, 31, 3);
   color: antiquewhite;
+
 }
 @keyframes fadeIn {
   /*animation-nameで設定した値を書く*/
