--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,13 +11,13 @@ body {
   text-align: right;
 }
 .title {
-  margin-top: 60px;
+  margin-top: 80px;
   color: rgb(58, 209, 189);
-  background-image: url("../public/image.PNG");
+  background: no-repeat url("../public/image.PNG");
   width: 60%;
   height: 600px;
   font-size: 6vmax;
-  animation: fadeIn 6.2s ease 0.3s 1 normal;
+  /* animation: fadeIn 6.2s ease 0.3s 1 normal; */
   text-align: center;
   margin-right: auto;
   margin-left: auto;
@@ -27,7 +27,7 @@ body {
   padding-top: 250px;
 }
 .about {
-  margin-top: 60px;
+  margin-top: 260px;
   color: rgb(245, 234, 234);
   font-size: 3vmax;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
@@ -39,13 +39,13 @@ body {
 }
 
 .Infomation{
-  margin-top: 60px;
+  margin-top: 260px;
   font-size: 50px;
   text-align: center;
 
 }
 .map {
-  margin-top: 60px;
+  margin-top: 260px;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
   text-align: center;
   margin-right: auto;
