--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,10 +27,10 @@ body {
   padding-top: 250px;
 }
 .about {
-  margin-top: 260px;
+  padding-top: 260px;
   color: rgb(245, 234, 234);
   font-size: 3vmax;
-  animation: fadeIn 6.2s ease 0.3s 1 normal;
+  animation: fadeIn 1.2s ease 0.3s 1 normal;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
@@ -46,6 +46,7 @@ body {
 }
 .map {
   margin-top: 260px;
+  padding-bottom: 260px;
   animation: fadeIn 6.2s ease 0.3s 1 normal;
   text-align: center;
   margin-right: auto;
@@ -53,8 +54,6 @@ body {
 }
 
 .footer {
-  margin-top: 60px;
-
   margin-right: auto;
   margin-left: auto;
   height: 90px;
