--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,6 +63,46 @@ body {
   color: antiquewhite;
 
 }
+
+
+.b {
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  background: transparent;
+  padding: 18px 30px;
+  border: 3px solid #333;
+  border-radius: 6px;
+  transition: .3s;
+}
+.b::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #333;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform ease .3s;
+}
+.b:hover {
+  color: #fff;
+}
+.b:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
+}
+
+
+
+
+
+
+
+
+
 @keyframes fadeIn {
   /*animation-nameで設定した値を書く*/
   0% {
@@ -100,3 +140,5 @@ body {
     width: 60%;
   }
 }
+
+
