--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,6 +73,8 @@ body {
   padding: 18px 30px;
   border: 3px solid #333;
   border-radius: 6px;
+  position: relative;
+  z-index: 1;
   transition: .3s;
 }
 .b::before {
@@ -82,6 +84,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: -1;
   background: #333;
   transform-origin: 100% 50%;
   transform: scaleX(0);
